# openblock

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dev-server.py  enterprise_extensions.py  eslint.config.js  monetization_backend.py  package-lock.json  package.json  requirements-rl.txt  requirements.txt  rl_backend.py  server.py  server_authority.py  server_payments.py  server_replay.py  server_security.py  spawn_tuning_backend.py  spawn_tuning_v2_backend.py  vite.config.js  vitest.config.js
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backend/: __init__.py  enterprise_extensions.py  monetization_backend.py  rl_backend.py  spawn_tuning_v2_backend.py
canvases/: candidate-blocks.canvas.tsx  cocos-web-parity.canvas.data.json  cocos-web-parity.canvas.tsx  difficulty-metrics-borrow-assessment.canvas.tsx  difficulty-metrics-gap-analysis.canvas.data.json  difficulty-metrics-gap-analysis.canvas.tsx  easter-eggs-roadmap.canvas.tsx  global-casual-game-research.canvas.tsx  global-strategy-pros-cons.canvas.tsx  player-lifecycle-maturity-ops-blueprint.canvas.tsx  player-retention-roadmap.canvas.tsx  realtime-state-history-analysis.canvas.tsx  retention-signals-analysis.canvas.tsx  rl-self-play-literature-comparison.canvas.tsx  rl-self-play-roadmap.canvas.tsx  rl-v9-1-deep-analysis.canvas.tsx  rl-v9-3-score-breakthrough-analysis.canvas.tsx  (+2 more)
cocos/: .gitignore  BUILD.md  (+5 more)
cocos/native/engine/ios/: AppDelegate.mm  CMakeLists.txt  Info.plist  Storyboard.storyboard  ViewController.mm
(+1530 files in other folders)
